tests/ui/parser/attribute/attr-bad-meta-4.stderr
error: expected a literal (`1u8`, `1.0f32`, `"string"`, etc.) here, found `-`
  --> $DIR/attr-bad-meta-4.rs:13:17
   |
LL | #[cfg(feature = -1)]
   |                 ^
   |
help: negative numbers are not literals, try removing the `-` sign
   |
LL - #[cfg(feature = -1)]
LL + #[cfg(feature = 1)]
   |

error: expected one of `(`, `)`, `,`, `::`, or `=`, found `token`
  --> $DIR/attr-bad-meta-4.rs:8:19
   |
LL | mac!(an(arbitrary token stream));
   |                  -^^^^^ expected one of `(`, `)`, `,`, `::`, or `=`
   |                  |
   |                  help: missing `,`

error: expected one of `(`, `)`, `,`, `::`, or `=`, found `stream`
  --> $DIR/attr-bad-meta-4.rs:8:25
   |
LL | mac!(an(arbitrary token stream));
   |                        -^^^^^^ expected one of `(`, `)`, `,`, `::`, or `=`
   |                        |
   |                        help: missing `,`

error[E0537]: invalid predicate `an`
  --> $DIR/attr-bad-meta-4.rs:8:6
   |
LL | mac!(an(arbitrary token stream));
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0537`.
